force-app/main/default/objects/Engagement_Vacation__c/Engagement_Vacation__c.object-meta.xml
<CustomObject>
    <label>Engagement Time Off</label>
    <nameField>
        <label>Torc User Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Engagement Time Off</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>