force-app/main/default/objects/Engagement_Vacation__c/fields/Customer_Hourly_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Customer_Hourly_Bill_Rate__c</fullName>
    <label>Customer Hourly Bill Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>