force-app/main/default/objects/Engagement_Vacation__c/fields/Engagement_Duration_weeks__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Duration_weeks__c</fullName>
    <label>Time Off Duration (weeks)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>