force-app/main/default/objects/Engagement_Vacation__c/fields/Engagement_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Engagement_End_Date__c</fullName>
    <label>Time Off End Date</label>
    <type>Date</type>
</CustomField>