force-app/main/default/objects/Engagement_Vacation__c/fields/Engagement_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Start_Date__c</fullName>
    <label>Time Off Start Date</label>
    <type>Date</type>
</CustomField>