force-app/main/default/objects/Engagement_Vacation__c/fields/For_Reversal_TimeOff__c.field-meta.xml
<CustomField>
    <fullName>For_Reversal_TimeOff__c</fullName>
    <formula>Talent_Hourly_Pay_Rate__c &lt;0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>For Reversal TimeOff</label>
    <type>Checkbox</type>
</CustomField>