force-app/main/default/objects/Engagement_Vacation__c/fields/Hours_Week__c.field-meta.xml
<CustomField>
    <fullName>Hours_Week__c</fullName>
    <label>Hours/Week</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>