force-app/main/default/objects/Engagement_Vacation__c/fields/Internal_Placement__c.field-meta.xml
<CustomField>
    <fullName>Internal_Placement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Internal Placement</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Internal_Placement__c.Torc_User__c</field>
            <operation>equals</operation>
            <valueField>$Source.Torc_User__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Internal_Placement__c</referenceTo>
    <relationshipName>Engagement_Vacations</relationshipName>
    <type>Lookup</type>
</CustomField>