force-app/main/default/objects/Engagement_Vacation__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Latest Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Engagement Time Off</relationshipLabel>
    <relationshipName>Engagement_Vacations</relationshipName>
    <type>Lookup</type>
</CustomField>