force-app/main/default/objects/Engagement_Vacation__c/fields/Placement__c.field-meta.xml
<CustomField>
    <fullName>Placement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Placement</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Engagement Time Off</relationshipLabel>
    <relationshipName>Engagement_Vacations</relationshipName>
    <type>Lookup</type>
</CustomField>