force-app/main/default/objects/Engagement_Vacation__c/fields/Placement_Active__c.field-meta.xml
<CustomField>
    <fullName>Placement_Active__c</fullName>
    <formula>Placement__r.Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Placement Active</label>
    <type>Checkbox</type>
</CustomField>