force-app/main/default/objects/Engagement_Vacation__c/fields/QB_Invoice_Updated__c.field-meta.xml
<CustomField>
    <fullName>QB_Invoice_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QB Invoice Updated?</label>
    <type>Checkbox</type>
</CustomField>