force-app/main/default/objects/Engagement_Vacation__c/fields/Setup_Quickbooks__c.field-meta.xml
<CustomField>
    <fullName>Setup_Quickbooks__c</fullName>
    <formula>HYPERLINK(&apos;/apex/QBOpportunitySetup?vacationid=&apos;+Id , &apos;Setup&apos;, &apos;_Blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Setup Quickbooks</label>
    <type>Text</type>
</CustomField>