force-app/main/default/objects/Engagement_Vacation__c/fields/Shift_To_Date__c.field-meta.xml
<CustomField>
    <fullName>Shift_To_Date__c</fullName>
    <label>Shift Bills/Invoices To Date</label>
    <type>Date</type>
</CustomField>