force-app/main/default/objects/Engagement_Vacation__c/fields/Shift_To_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Shift_To_End_Date__c</fullName>
    <label>Shift To End Date</label>
    <type>Date</type>
</CustomField>