force-app/main/default/objects/Engagement_Vacation__c/fields/Shift_To_End_Date_Formula__c.field-meta.xml
<CustomField>
    <fullName>Shift_To_End_Date_Formula__c</fullName>
    <formula>Shift_To_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shift To End Date</label>
    <type>Date</type>
</CustomField>