force-app/main/default/objects/Engagement_Vacation__c/fields/Talent_Hourly_Pay_Rate__c.field-meta.xml
<CustomField>
    <fullName>Talent_Hourly_Pay_Rate__c</fullName>
    <label>Talent Hourly Pay Rate</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>