force-app/main/default/objects/Engagement_Vacation__c/fields/Torc_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Torc_External_ID__c</fullName>
    <externalId>true</externalId>
    <label>Torc External ID</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>