force-app/main/default/objects/Engagement_Vacation__c/fields/Torc_User__c.field-meta.xml
<CustomField>
    <fullName>Torc_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Torc User</label>
    <referenceTo>Torc_User__c</referenceTo>
    <relationshipName>Engagement_Vacations</relationshipName>
    <type>Lookup</type>
</CustomField>