force-app/main/default/objects/Engagement_Vacation__c/fields/User_Name__c.field-meta.xml
<CustomField>
    <fullName>User_Name__c</fullName>
    <formula>Torc_User__r.Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Talent Full Name</label>
    <type>Text</type>
</CustomField>