force-app/main/default/objects/Engagement_Vacation__c/fields/Weekly_Bill_Rate__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Bill_Rate__c</fullName>
    <formula>Hours_Week__c *  Customer_Hourly_Bill_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weekly Bill Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>