force-app/main/default/objects/Engagement_Vacation__c/fields/Weekly_Talent_Rate__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Talent_Rate__c</fullName>
    <formula>Hours_Week__c * Talent_Hourly_Pay_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Weekly Talent Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>